k8s-manifests/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test
    vcluster.loft.sh/managed-by: testing-vc3
  name: testpod
spec:
  containers:
  - image: nginx
    name: test
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "250m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
