k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller
  labels:
    app: sandbox-admission-controller
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: sandbox-admission-controller
